# python_project_template

./: .dprint.jsonc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  HOW_TO_RELEASE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  smoke_test.py
.claude/: settings.json
.github/workflows/: demo.yml  docs.yml  lint.yml  pre-commit.yml  pytest-minimal.yml  pytest.yml  wheels.yml
TEMPLATE/: __init__.py  docstring.py  docstring.py.orig  docstring.py.patch  helloworld.py  numpy.py
TEMPLATE/sphinxcontrib/: __init__.py
TEMPLATE/sphinxcontrib/napoleon/: __init__.py  docstring.py  napoleon_docstring.py
TEMPLATE/tests/: __init__.py  conftest.py  test_helloworld.py
ci/: .coveragerc  install_python.ps1  requirements-conda-forge.yml  requirements-docs.yml  requirements-latest.yml  requirements-lint.yml  requirements-minimal.yml  requirements-py35.yml  requirements-py36-windows.yml  requirements-py36.yml  requirements-py37.yml  requirements-py38.yml  requirements-windows.yml  requirements.yml
doc/: Makefile  api.rst  conf.py  develop.rst  environment.yml  example.py  example.py.orig  example.py.patch  helloworld.rst  index.rst  installing.rst  requirements.yml  sample.md  sphinxcontrib.napoleon.rst  whats-new.rst
doc/api/: helloworld.rst
