[metadata]
name = TEMPLATE
author = TODO
author_email = TODO@TODO.com
license = Apache
description = TODO
description_content_type=text/plain
long_description = TODO
long_description_content_type=text/x-rst
keywords = TODO, TODO
url = https://github.com/TODO/TEMPLATE
classifiers =
    # TODO update choosing from https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = TEMPLATE
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    setuptools  # For pkg_resources
    # TODO your project dependencies here
    # numpy >= 1.15
    # pandas >= 0.25
setup_requires = setuptools_scm

[options.extras_require]
# TODO optional pip dependencies
# some_label =
#     dependency1
#     dependency2

[options.package_data]
TEMPLATE =
    py.typed
    tests/data/*

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[tool:pytest]
addopts = --strict
python_files = test_*.py
testpaths = TEMPLATE/tests

[flake8]
# https://github.com/python/black#line-length
max-line-length = 88
# E203: PEP8-compliant slice operators
#       https://github.com/python/black#slices
# W503: Allow for breaks before binary operator (Knuth's convention) - see
#       https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
ignore = E203, W503
exclude =
  .eggs
  doc/

[isort]
default_section = THIRDPARTY
known_first_party = TEMPLATE
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

# mypy: Ignore non-typed libraries
# TODO add any other library for which mypy returns 'No library stub'
[mypy-pytest]
ignore_missing_imports = True
[mypy-setuptools]
ignore_missing_imports = True
